# whisper-burn

./: .gitignore  Cargo.toml  README.md  audio.txt  output-0.14.txt  output-0.16.txt  output.txt  pyproject.toml  tiny_en.cfg  transcription.txt
python/: pyproject.toml
scripts/: convert_huggingface_model.py  test_one.sh
src/: audio.rs  beam.rs  helper.rs  lib.rs  main.rs  multilingual.rs  token.rs  transcribe.rs
src/bin_old/: convert.rs  steam.rs  transcribe.rs  translate.rs
src/model/: load.rs  mod.rs
tiny_en/decoder/: n_layer.npy  positional_embedding.npy
tiny_en/decoder/block_0/attn/key/: weight.npy
tiny_en/decoder/block_0/attn/query/: bias.npy  weight.npy
tiny_en/decoder/block_0/attn/value/: bias.npy  weight.npy
tiny_en/decoder/block_0/attn_ln/: bias.npy  eps.npy  weight.npy
tiny_en/decoder/block_0/cross_attn/key/: weight.npy
tiny_en/decoder/block_0/cross_attn/query/: bias.npy  weight.npy
tiny_en/decoder/block_0/cross_attn/value/: bias.npy  weight.npy
tiny_en/decoder/block_0/cross_attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_0/mlp/mlp1/: bias.npy  weight.npy
tiny_en/decoder/block_0/mlp/mlp2/: bias.npy  weight.npy
tiny_en/decoder/block_0/mlp_ln/: bias.npy  weight.npy
tiny_en/decoder/block_1/attn/key/: weight.npy
tiny_en/decoder/block_1/attn/query/: bias.npy  weight.npy
tiny_en/decoder/block_1/attn/value/: bias.npy  weight.npy
tiny_en/decoder/block_1/attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_1/cross_attn/key/: weight.npy
tiny_en/decoder/block_1/cross_attn/query/: bias.npy  weight.npy
tiny_en/decoder/block_1/cross_attn/value/: bias.npy  weight.npy
tiny_en/decoder/block_1/cross_attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_1/mlp/mlp1/: bias.npy  weight.npy
tiny_en/decoder/block_1/mlp/mlp2/: bias.npy  weight.npy
tiny_en/decoder/block_1/mlp_ln/: bias.npy  weight.npy
tiny_en/decoder/block_2/attn/key/: weight.npy
tiny_en/decoder/block_2/attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_2/cross_attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_2/mlp_ln/: bias.npy  weight.npy
tiny_en/decoder/block_3/attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_3/cross_attn_ln/: bias.npy  weight.npy
tiny_en/decoder/block_3/mlp_ln/: bias.npy  weight.npy
tiny_en/decoder/ln/: bias.npy  weight.npy
tiny_en/encoder/: n_audio_state.npy  n_mels.npy  positional_embedding.npy
tiny_en/encoder/block_0/attn/: n_head.npy
tiny_en/encoder/block_0/attn_ln/: bias.npy  weight.npy
tiny_en/encoder/block_0/mlp_ln/: bias.npy  weight.npy
tiny_en/encoder/block_1/attn_ln/: bias.npy  weight.npy
tiny_en/encoder/block_1/mlp_ln/: bias.npy  weight.npy
tiny_en/encoder/block_2/attn_ln/: bias.npy  weight.npy
tiny_en/encoder/block_2/mlp_ln/: bias.npy  weight.npy
tiny_en/encoder/block_3/attn_ln/: bias.npy  weight.npy
tiny_en/encoder/block_3/mlp_ln/: bias.npy  weight.npy
tiny_en/encoder/conv1/: bias.npy  weight.npy
tiny_en/encoder/conv2/: bias.npy  weight.npy
tiny_en/encoder/ln_post/: bias.npy  weight.npy
(+63 files in other folders)
