[package]
name = "whisper_stream"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# This work is based off of https://github.com/Gadersd/whisper-burn/tree/main
# it has been updated to use burn 13 and also has two new binaries 'stream' and 'translate'

[dependencies]
burn = { version="0.13.1", features=["wgpu"] }
serde = {version = "1.0.171", features = ["std", "derive"]}
num-traits = "0.2.15"
hound = "3.5.0"
tokenizers = {version = "0.13.3", default-features = false, features = [
  "onig",
  "http",
]}
npy = "0.4.0"
cfg-if = "0.1"
strum = "0.25.0"
strum_macros = "0.25.0"
cpal = "0.15.3"
anyhow = "1.0.82"
chrono = "0.4.37"
webrtc-vad = "0.4.0"
dasp = { version = "0.11.0", features = ["all"]}
rtrb = "0.3.0"
