[package]
name = "whisper_stream"
version = "0.4.0"
edition = "2021"

[features]
default = ["wgpu"]
# Backend features
ndarray = ["burn/ndarray"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
# Optimization features
fusion = ["burn/fusion"]

[dependencies]
burn = { version="0.18" }
serde = { version = "1.0", features = ["std", "derive"]}
num-traits = "0.2"
hound = "3.5.0"
tokenizers = { version = "0.14", default-features = false, features = [
  "onig",
  "http",
]}
npy = "0.4.0"
cfg-if = "1.0"
strum = "0.27"
strum_macros = "0.27"
cpal = "0.15.3"
anyhow = "1.0"
chrono = "0.4"
webrtc-vad = "0.4.0"
dasp = { version = "0.11.0", features = ["all"]}
rtrb = "0.3.0"

clap = { version = "4.5", features = ["derive"] }
log = "0.4"

