[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "typing",
    "torch",
    "tinygrad",
    "openai-whisper",
    "transformers",
    "numba>=0.56.0",
    "llvmlite>=0.39.0",
    "multiple-datasets @ git+https://github.com/bayartsogt-ya/whisper-multiple-hf-datasets@main"
]

# "git+https://github.com/bayartsogt-ya/whisper-multiple-hf-datasets@main"
